[package]
name = "lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
# lambda_http を rustls に切り替え
lambda_http = { version = "^1.0.0", default-features = false, features = ["apigw_http", "tracing"] }

tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

serde_json = "^1.0.145"
serde = { version = "^1.0.228", features = ["derive"] }
rig-core = "^0.25.0"
rig-bedrock = "^0.3.7"
rig-qdrant = "^0.1.30"
async-stream = "^0.3.6"

aws-config = "^1.8.5"
aws-sdk-bedrockruntime = "^1.119.0"
aws-smithy-types = "^1.3.2"
tokio = { version = "^1.39.0", features = ["full"] }

# OpenSSL を静的リンク
openssl = { version = "0.10", features = ["vendored"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
